internal/cilium/secureIngress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: cilium
  rules:
    - host: hubble.services.home
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
  tls:
    - secretName: hubble-ingress-cert
      hosts:
        - hubble.services.home
